--- a/appsettings.json
+++ b/appsettings.json
@@ -1,10 +1,10 @@
 {
   "MetaData": {
-  "Exposure": "External",
-  "ApiType": "REST",
-  "AuthenMethod": "API KEY",
-  "Environment": "Production",
-  "Infrastructure": "On-premises"
+    "Exposure": "External",
+    "ApiType": "REST",
+    "AuthenMethod": "API KEY",
+    "Environment": "UAT",
+    "Infrastructure": "Azure"
   },
   "AllowedHosts": "*"
 }
