--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,9 @@
 {
   "MetaData": {
-    "Exposure": "External",
+    "Exposure": "Internal",
     "ApiType": "REST",
-    "AuthenMethod": "Oauth2.0",
-    "Environment": "Production",
+    "AuthenMethod": "API Key",
+    "Environment": "Development",
     "Infrastructure": "Azure"
   },
   "AllowedHosts": "*"
