--- a/appsettings.json
+++ b/appsettings.json
@@ -3,7 +3,7 @@
     "Exposure": "Internal",
     "ApiType": "REST",
     "AuthenMethod": "API Key",
-    "Environment": "Development",
+    "Environment": "UAT",
     "Infrastructure": "Azure"
   },
   "AllowedHosts": "*"
