--- a/appsettings.json
+++ b/appsettings.json
@@ -2,8 +2,8 @@
   "MetaData": {
     "Exposure": "Internal",
     "ApiType": "REST",
-    "AuthenMethod": "API Key",
-    "Environment": "Production",
+    "AuthenMethod": "Oauth2.0",
+    "Environment": "Development",
     "Infrastructure": "Azure"
   },
   "AllowedHosts": "*"
